#When more folders are added at the Ancona level a CMakeTest file must 
#be created and a line should be added here.
add_subdirectory(Src/Ancona/Core2D)
add_subdirectory(Src/Ancona/Framework)
add_subdirectory(Src/Ancona/Platformer)
add_subdirectory(Src/Ancona/Target)
add_subdirectory(Src/Ancona/Util)
add_subdirectory(Src/Ancona/Util2D)
